# diver_swimming_state_classification

./: .gitignore  README.md
anomaly_detection/: README.md  gen_data.py  predict.py  run_container.sh  run_gen_data.sh  runner.py  train_irv.sh  train_models_pool.sh  train_uea.sh  visualize_pose.py
anomaly_detection/conf/: train_dl.yaml  train_pose.yaml  train_vis.yaml
anomaly_detection/conf/dataset/: BasicMotions.yaml  ChestMntdAcl.yaml  Epilepsy.yaml  PoolData.yaml  WalkingSittingStanding.yaml
anomaly_detection/conf/hydra/: default.yaml
anomaly_detection/conf/model/: attention.yaml  cnn.yaml  cnn_cw.yaml  cnn_dn.yaml  cnn_lw.yaml  tsf.yaml  vision.yaml
anomaly_detection/data/calibs/: zed_2024-06-16-19-15-33_4x6-camchain.yaml
anomaly_detection/datasets/: __init__.py  irv_loader.py  uea_loader.py  utils.py
anomaly_detection/docker/: Dockerfile  requirements.txt
anomaly_detection/models/: TSF.py  __init__.py  attention.py  cnn.py  cnn_cw.py  cnn_dn.py  cnn_lw.py  dino.py  videopose.py  vision.py  yolo.py
anomaly_detection/tools/: dataset.py  helper.py  loss.py  plot.py  utils.py
diver_anomaly_ros/: README.md  post_install.sh  source_me.sh  verify_working_install.py
diver_anomaly_ros/src/diver_anomaly/: CMakeLists.txt  package.xml
diver_anomaly_ros/src/diver_anomaly/config/: conv_config.yaml  decision_tree_config.yaml  (+5 more)
diver_anomaly_ros/src/estimator_msgs/: CMakeLists.txt  package.xml
diver_anomaly_ros/src/pose_estimator/: CMakeLists.txt  package.xml  setup.py
diver_anomaly_ros/src/uoled_msgs/: CMakeLists.txt  README.md  package.xml
diver_anomaly_ros/src/uoled_msgs/msg/: BBox.msg  StatusIndicator.msg  TagFeedback.msg
(+39 files in other folders)
