<package>
  <name>uoled</name>
  <description>
  A driver for the back panel display of the aqua robot.
  </description>
  <license>BSD</license>
  <author email="dmeger@cim.mcgill.ca">David Meger</author>
  <author email="anqixu@cim.mcgill.ca">Anqi Xu</author>
  <maintainer email="dmeger@cim.mcgill.ca">David Meger</maintainer>
  <maintainer email="anqixu@cim.mcgill.ca">Anqi Xu</maintainer>
  <version>1.0.0</version>
  <url>http://ros.org/wiki/uoled</url>
  
  <buildtool_depend>catkin</buildtool_depend>
    
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  
</package>


